feat: replace SVG icons with image elements for weather icon and loading indicator

--- a/src/styles/components/_loading-indicator.scss
+++ b/src/styles/components/_loading-indicator.scss
@@ -146,7 +146,8 @@
       height: 3rem;
     }
 
-    svg {
+    svg,
+    img {
       width: 100%;
       height: 100%;
       filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
